[package]
name = "bitr"
version = "0.1.0"
authors = ["PunitLodha <punitlodha@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.2"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
reqwest = { version = "0.10", features = ["blocking"] }
ring = {version = "0.16.15", features = ["std"]}